2011-01-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextAttachment.m (-trackMouse:inRect:ofView:...): Call
	the deprecated OpenStep delegate methods if the delegate does not
	implement the new Mac OS X methods.

2011-01-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-mouseDown:): Add missing conversion from
	character indexes to glyph indexes when computing an attachment
	cell's frame.

2011-01-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSLayoutManager.m (attachmentSize): Prevent potential
	null pointer dereference.

2011-01-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextStorage.m (-removeLayoutManager:): Avoid potential
	crash when text network is owned by a text view.

2010-12-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSToolbarView.m (initSystemExtensionsColors): Remove this
	function and the NSColor extensions as these no longer get
	used. The colours for NSToolbar are handled by GSTheme.

2010-12-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenuView.m (-locationForSubmenu:):
	Fix submenu placement for WindowMaker interface style (it was off
	by 1 pixel).

2010-12-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenuView.m (-trackWithEvent:):
	Make pop up menus in Macintosh menu style behave more similar to
	OS X. In particular, when the user clicks the button, the menu
	stays open until the next click.

2010-12-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenuView.m (-update):
	Don't use a title bar for menus in Macintosh interface style.

	* Source/NSMenuView.m (_executeItemAtIndex:removeSubmenu:):
	End menu tracking in Macintosh and Windows95 interface styles when
	the user clicks on a submenu item.

	* Source/NSMenu.m (-displayTransient):
	Place the top left edge of a menu at the mouse position when
	displaying a context menu in Macintosh and Windows95 interface
	styles to prevent a user from accidentally selecting the first
	menu item.
