@@ -1,3 +1,8 @@
+2011-01-03  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/NSMatrix.m (-setEnabled:): Implement method. It enables
+	or disables all cells as in Cocoa.
+
 2011-01-01  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Source/NSTextAttachment.m (-trackMouse:inRect:ofView:...): Call
